--- a/SeithmanSoftware.Ensure/SeithmanSoftware.Ensure.csproj
+++ b/SeithmanSoftware.Ensure/SeithmanSoftware.Ensure.csproj
@@ -1,12 +1,12 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>net5.0;netcoreapp3.1;netstandard2.1;net462</TargetFrameworks>
+    <TargetFrameworks>netcoreapp3.1;netstandard2.1;net462;net7.0;net6.0</TargetFrameworks>
     <PackageId>SeithmanSoftware.Ensure</PackageId>
-    <Version>1.0.0</Version>
+    <Version>2.0.0</Version>
     <Author>Jarred L. Harris</Author>
     <Company>Seithman Software</Company>
-    <PackageVersion>1.0.0</PackageVersion>
+    <PackageVersion>2.0.0</PackageVersion>
     <PackageDescription>This package providers static class that performs various checks typically used to test input parameters to a method. The tests each throw an EnsureBaseException on failure.</PackageDescription>
     <PackageProjectUrl>https://github.com/seithman/SeithmanSoftware.Ensure</PackageProjectUrl>
     <RepositoryUrl>https://github.com/seithman/SeithmanSoftware.Ensure</RepositoryUrl>
